assignment 3 syllabus update

--- a/assignment-3.html
+++ b/assignment-3.html
@@ -61,11 +61,11 @@
                         <li>Group 4: The web in 2004-2007</li>
                         <li>Group 5: The web in 2007-2014</li>
                     </ul></li>
-                <li><strong>Update class cover page with </strong>
+                <li><strong>Update class cover page</strong>
                     <ul>
                         <li>Add interactivity and dynamic content</li>
                         <li>Based on considerations about your potential audience/users, apply UI/UX Design reasoning to justify your update</li>
-                    </ul></li></li>
+                    </ul></li>
                 </ol>
             </p>
     
