--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -291,7 +291,7 @@
 			<h3>Discussion (UI/UX Fundamentals)</h3>
 			<ol>
 				<li>Previous assignment and reading discussion</li>
-				<li>Intro to UX design</li>
+				<li>Intro to UX design: principles, methods and patterns</li>
 				<li>Intro to Front-end design and development for the web</li>
 				<li>Design for multiple screens</li>
 				<li>Javascript recap (basic)</li>
@@ -304,13 +304,32 @@
 
 			<h3>Assignments</h3>
 			<ol>
-				<li>History of the web single page website</li>
-			</ol>
+                <li><strong>History of the web</strong>
+                    <ul>
+                        <li>Research and 6 minute Presentation</li>
+                        <li>Make a simple web page for the presentation content, and use it to present your content. For this assignment it is only required that you use HTML. CSS and/or Javascript are optional</li>
+                        <li>Group 1: The web in 1992-1996</li>
+                        <li>Group 2: The web in 1996-2000</li>
+                        <li>Group 3: The web in 2000-2004</li>
+                        <li>Group 4: The web in 2004-2007</li>
+                        <li>Group 5: The web in 2007-2014</li>
+                    </ul></li>
+                <li><strong>Update class cover page</strong>
+                    <ul>
+                        <li>Add interactivity and dynamic content</li>
+                        <li>Based on considerations about your potential audience/users, apply UI/UX Design reasoning to justify your update</li>
+                    </ul></li>
+            </ol>
 
 			<h3>Readings</h3>
 			<ol>
-				<li>Andrew Maier - Complete Beginner’s Guide to Interaction Design - <a href="http://www.uxbooth.com/articles/complete-beginners-guide-to-interaction-design/">http://www.uxbooth.com/articles/complete-beginners-guide-to-interaction-design/</a></li>
-			</ol>
+                <li>Andrew Maier - <a href="http://www.uxbooth.com/articles/complete-beginners-guide-to-interaction-design/">Complete Beginner’s Guide to Interaction Design</a></li>
+                <li>Ben Shneiderman - <a href="http://www.designprinciplesftw.com/collections/shneidermans-eight-golden-rules-of-interface-design">Eight Golden Rules of Interface Design</a></li>
+                <li>Charles L. Mauro - <a href="http://www.mauronewmedia.com/blog/why-angry-birds-is-so-successful-a-cognitive-teardown-of-the-user-experience/">Why Angry Birds is so successful and popular</a></li>
+                <li>Apple OS X Human Interface Guidelines - <a href="https://developer.apple.com/library/mac/documentation/UserExperience/Conceptual/OSXHIGuidelines/DesignPrinciples.html#//apple_ref/doc/uid/20000957-CH18-SW1" target="blank">Design Principles</a></li>
+                <li>Apple OS X Human Interface Guidelines - <a href="https://developer.apple.com/library/mac/documentation/UserExperience/Conceptual/OSXHIGuidelines/Strategies.html#//apple_ref/doc/uid/20000957-CH19-SW1" target="blank">User-Centered Design</a></li>
+                <li>Jakob Nielsen - <a href="http://www.nngroup.com/articles/how-users-read-on-the-web/" target="blank">How Users Read on the Web</a></li>
+                </ol>
 		</section>
 
 		<section class="week" id="week-five">
