--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         <div id="links">
             <h3>Resources</h3>
             <ol>
+                <li><a href="examples.html" target="blank">Code examples</a> [Important]</li>
                 <li>[Very] <a href="links.html" target="blank">Useful Links</a></li>
             </ol>
 
