edit index spacing

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             padding: 0 10px 0 20px;
             margin: auto;
         }
+        ol li{
+            padding:3px 0 0 0;
+        }
     </style>
 </head>
 
