--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                 <li><a href="assignment-1.html">HTML & CSS Review</a></li>
                 <li><a href="assignment-2.html">Development Practices</a></li>
                 <li><a href="assignment-3.html">UI/UX Fundamentals</a></li>
+                <li><a href="assignment-4.html">Dive into Javascript</a></li>
             </ol>
         </div>
         
