--- a/examples.html
+++ b/examples.html
@@ -31,22 +31,25 @@
             margin:0;
             padding:0px;
         }
+        #wrapper h3{
+            margin:12px 0 0 0;
+            padding:0px;
+
+        }
         #wrapper{
     		width: 640px;
-    		margin:40px auto;
-            margin-bottom:0;
-            bottom:0;
-    	}
+    		margin:40px auto 0 auto;
+        }
         .golden{
             color:gold;
         }
         ol{
-            margin: auto;
+            margin: 0 auto;
             font-size:18px;
         }
 
         ol li{
-            padding:5px 20px 0 0;
+            padding:3px 20px 0 0;
         }
     </style>
 </head>
@@ -56,11 +59,12 @@
     </div>
 	<div id="wrapper">
 		<h1>IML 400 Code Examples</h1>
-		<ol>
+		<ol><h3>Basics</h3>
 			<li><a href="spring-2014/reading-report-template.html">Reading Report Template</a></li>
 			<li><a href="minimal-template.html">Minimal Template</a></li>
 			<li><a href="spring-2014/assignment-2-1.html">Self referential example</a></li>
 			<li><a href="spring-2014/assignment-2-2.html">Img and Hover</a></li>
+			<li><a href="fall-2012/hover-test.html">Background Property Hover Test</a></li>
 			<li><a href="spring-2013/layout-1.html">Landing Page layout left justified</a></li>
 			<li><a href="spring-2013/layout-2.html">Landing Page layout center Justified, Fixed Width Grid</a></li>
 			<li><a href="spring-2013/layout-3.html">Landing Page layout left Justified, Variable Width Grid</a></li>
@@ -68,23 +72,37 @@
 			<li><a href="spring-2014/story-template-1/tabs-1.html">Tab navigation across multiple pages using lists and inline display</a></li>
 			<li><a href="spring-2014/story-template-2/menu-1.html">Left menu navigation across multiple pages using lists</a></li>
 			<li><a href="spring-2014/tabs-tutorial/">Extremely simple tabs template</a></li>
+		</ol>
+
+		<ol><h3>CSS</h3>
+			<li><a href="spring-2013/hexagons/">CSS Transforms Hexagons</a></li>
+			<li><a href="fall-2012/css-transitions.html">CSS Transitions</a></li>
+		</ol>
+
+		<ol><h3>Javascript and JQuery</h3>
 			<li><a href="spring-2013/arrays.html">Array Shuffle</a></li>
+			<li><a href="spring-2014/pop-ups/">Object based pop-ups</a></li>
+			<li><a href="spring-2013/navigation.html">Event binding</a></li>
+			<li><a href="spring-2014/video-bg/">Simple Video Background</a></li>
+			<li><a href="spring-2014/slideshow-bg/">Slideshow background</a></li>
+			<li><a href="spring-2014/sticky-menu/">Sticky Menu</a></li>
+		</ol>
+
+		<ol><h3>JQuery UI</h3>
 			<li><a href="fall-2012/JQueryUI-sortablegrid.html">A sortable grid</a></li>
 			<li><a href="fall-2012/JQueryUI-accordion.html">Accordion Template</a></li>
 			<li><a href="fall-2012/JQueryUI-slideshow.html">Fading slideshow</a></li>
 			<li><a href="fall-2012/JQueryUI-slideshow-2.html">Swiping slideshow</a></li>
-			<li><a href="spring-2014/slideshow-bg/">Slideshow background</a></li>
+		</ol>
+
+		<ol><h3>JQuery Plugins</h3>
 			<li><a href="fall-2012/video-bg/">Video Background with Drop down Menu using Tubular</a></li>
 			<li><a href="spring-2014/youtube-bg/">Video Background using Tubular</a></li>
 			<li><a href="fall-2012/supersized/slideshow/mytest.html">Image Slideshow using Supersized</a></li>
-			<li><a href="spring-2014/video-bg/">Simple Video Background</a></li>
-			<li><a href="spring-2014/pop-ups/">Object based pop-ups</a></li>
-			<li><a href="spring-2014/sticky-menu/">Sticky Menu</a></li>
-			<li><a href="fall-2012/hover-test.html">Hover Test</a></li>
-			<li><a href="spring-2013/hexagons/">CSS Transforms Hexagons</a></li>
-			<li><a href="fall-2012/css-transitions.html">CSS Transitions</a></li>
-			<li><a href="spring-2013/navigation.html">Event binding</a></li>
 			<li><a href="spring-2013/transit/">JQuery transit plugin</a></li>
+		</ol>
+
+		<ol><h3>Public APIs</h3>	
 			<li><a href="spring-2013/twitter/">Old Twitter API</a> [Broken. Needs update to new API]</li>
 			<li><a href="spring-2014/apis/delicious-api-v2.html?user=blackaller">Delicious API</a></li>
 			<li><a href="fall-2012/map-bg/">Google Maps API Examples</a></li>
@@ -93,6 +111,10 @@
 			<li><a href="fall-2012/map-bg/flyover-teleporter.html">Google Maps API Flyover Teleporter</a></li>
 			<li><a href="fall-2012/map-bg/address-to-coordinates.html">Google Maps API Address to Coordinates</a> [Currently Broken]</li>
 		</ol>
+
+		<p style="text-align:center; margin:60px 0 0 0; padding:0;">
+            <img src="fall-2012/images/roboteeno.png" style="display:block; margin:auto; width:60%;"/>
+        </p> 
 	</div>
 </body>
 </html>
