--- a/assignment-4.html
+++ b/assignment-4.html
@@ -81,12 +81,20 @@
                 <h2>Readings Due Date</h2>
                 <span class="due-date">Monday, February 23rd, 9:00am.</span>
             </p>
-            <!--
+            
             <p>
                 <h2>Additional Resources</h2>
+                <ol><h3>Javascript</h3>
+                    <li><a href="http://www.json.org">JSON.org</a> - Introducing JSON (JavaScript Object Notation)</li>
+                    <li><a href="http://eloquentjavascript.net/" target="blank">Eloquent Javascript</a> - Free online book with interactive tutorials</li>
+                    <li><a href="http://en.wikipedia.org/wiki/JavaScript" target="blank">Javascript History</a></li>
+                    <li><a href="http://jquery.com/" target="blank">JQuery</a></li>
+                    <li><a href="http://jqueryui.com/" target="blank">JQuery UI</a></li>
+                    <li><a href="http://jsfiddle.net/">JSFiddle</a> - Livecoding environment</li>
+                    <li><a href="http://codepen.io/">CodePen</a> - Livecoding environment</li>
+                </ol>
 
             </p>
-            -->
             <p style="text-align:center; margin:0; padding:0;">
                 <img src="fall-2012/images/robobaby.png" style="display:block; margin:auto;"/>
             </p>    
