--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -340,6 +340,7 @@
 				<li>Previous assignment and reading discussion</li>
 				<li>Front-end design and development. User Agents, Events, Timing and Javascript</li>
 				<li>Intro to object oriented programming. What is the Document Object Model?</li>
+				<li>Intro to JSON (JavaScript Object Notation)</li>
 				<li>Front-end design patterns for the web. MVC, etc</li>
 				<li>Overview of external libraries and frameworks (purely for UI/UX)</li>
 			</ol>
