nada nada nada nada

--- a/assignment-3.html
+++ b/assignment-3.html
@@ -87,7 +87,7 @@
                 <li>Apple OS X Human Interface Guidelines - <a href="https://developer.apple.com/library/mac/documentation/UserExperience/Conceptual/OSXHIGuidelines/DesignPrinciples.html#//apple_ref/doc/uid/20000957-CH18-SW1" target="blank">Design Principles</a></li>
                 <li>Apple OS X Human Interface Guidelines - <a href="https://developer.apple.com/library/mac/documentation/UserExperience/Conceptual/OSXHIGuidelines/Strategies.html#//apple_ref/doc/uid/20000957-CH19-SW1" target="blank">User-Centered Design</a></li>
                 <li>Jakob Nielsen - <a href="http://www.nngroup.com/articles/how-users-read-on-the-web/" target="blank">How Users Read on the Web</a></li>
-                <li>Dan Gardner and Mike Treff - The Next Big Thing In Responsive Design - <a href="http://www.fastcodesign.com/3036091/the-next-big-thing-in-responsive-design/">http://www.fastcodesign.com/3036091/the-next-big-thing-in-responsive-design/</a></li>
+                <li>Dan Gardner and Mike Treff - <a href="http://www.fastcodesign.com/3036091/the-next-big-thing-in-responsive-design/">The Next Big Thing In Responsive Design</a></li>
                 </ol>
             </p>
             
