live inputs example 1

--- a/examples.html
+++ b/examples.html
@@ -90,7 +90,7 @@
 		<ol><h3>Javascript and JQuery</h3>
 			<li><a href="spring-2013/arrays.html">Array Shuffle</a></li>
 			<li><a href="spring-2014/pop-ups/">Object based pop-ups</a> and <a href="spring-2014/pop-ups/youtube-popups.html">Object based video pop-ups</a></li>
-			<li><a href="live-inputs.html">Live inputs using contenteditable</a></li>
+			<li><a href="live-inputs.html">Live inputs</a> using contenteditable</li>
 			<li><a href="spring-2013/navigation.html">Event binding</a></li>
 			<li><a href="spring-2014/video-bg/">Simple Video Background</a></li>
 			<li><a href="spring-2014/slideshow-bg/">Slideshow background</a></li>
