live inputs example 1 tweak

--- a/live-inputs.html
+++ b/live-inputs.html
@@ -10,6 +10,7 @@
 	}
 	h1{
 		font-weight: normal;
+		padding:0.2em 0.6em 0.3em 1.0em;
 	}
 	section{
 		position:relative;
@@ -67,7 +68,7 @@
 </head>
 <body>
 	<section>
-	<h1>Live Inputs Palindromic Explorer <span id="char-count"></span></h1>
+	<h1>Live Inputs (Palindromic Explorer) <span id="char-count"></span></h1>
 	<!--Using div contenteditable instead of textarea because of the convenient CSS only auto resize controls :D
 	<textarea type="text"></textarea>
 	-->
