adding the selfish giant example and some tweaks

--- a/assignment-4.html
+++ b/assignment-4.html
@@ -50,9 +50,15 @@
             <h2>Assignment 4: Dive into Javascript</h2>
 
             <ol>
-                <li>Create an interactive story that requires user input.</li>
+                <li>Create an interactive story that requires user input. <a href="http://en.wikipedia.org/wiki/Mad_Libs">Mad Libs</a> or <a href="http://en.wikipedia.org/wiki/Exquisite_corpse">Exquisite Corpses</a> are two directions you can take but feel free to explore your own ideas.</li>
             </ol>
-    
+            <p>
+                The following are two simple code examples that illustrate some functionality for user inputs and string manipulation.
+            </p>
+            <ol>
+                <li><a href="live-inputs.html">Live text input and string manipulation</a> - introducing the <a href="http://html5demos.com/contenteditable">contenteditable</a> attribute</li>
+                <li><a href="moving-strings">More complex string manipulation</a> - activated on click. View the source code and note the parsing techniques to build a usable structure from a plain text file. How would I go about it if I wanted to <a href="http://en.wikipedia.org/wiki/Sanitization_%28classified_information%29">redact</a> out specific words or sentences from a text? Would I need more structure? What would it take to build an interactive interface that redacts words or blocks of words on click?</li>
+            </ol>
         
             <h2>Due Date</h2>
             <p>
@@ -66,12 +72,12 @@
             <ol>
                 <!--
                 <li>Dan Gardner and Mike Treff - The Next Big Thing In Responsive Design - <a href="http://www.fastcodesign.com/3036091/the-next-big-thing-in-responsive-design/">http://www.fastcodesign.com/3036091/the-next-big-thing-in-responsive-design/</a></li>-->
-                <li>Eloquent Javascript Chapter 2: <a href="http://eloquentjavascript.net/chapter2.html" target="blank">Basic JavaScript: values, variables, and control flow</a></li>
-                <li>Eloquent Javascript Chapter 3: <a href="http://eloquentjavascript.net/chapter3.html" target="blank">Functions</a></li>
-                <li>Eloquent Javascript Chapter 11: <a href="http://eloquentjavascript.net/chapter11.html" target="blank">Web programming: A crash course</a></li>
-                <li>Javascript 101 - <a href="http://learn.jquery.com/javascript-101/" target="blank">http://learn.jquery.com/javascript-101/</a></li>
-                <li>How JQuery works - <a href="http://learn.jquery.com/about-jquery/how-jquery-works/" target="blank">http://learn.jquery.com/about-jquery/how-jquery-works/</a></li>
-                <li>Javascript Objects in Detail - <a href="http://javascriptissexy.com/javascript-objects-in-detail/" target="blank">http://javascriptissexy.com/javascript-objects-in-detail/</a></li>
+                <li>Eloquent Javascript Chapter 2: <a href="http://eloquentjavascript.net/chapter2.html">Basic JavaScript: values, variables, and control flow</a></li>
+                <li>Eloquent Javascript Chapter 3: <a href="http://eloquentjavascript.net/chapter3.html">Functions</a></li>
+                <li>Eloquent Javascript Chapter 11: <a href="http://eloquentjavascript.net/chapter11.html">Web programming: A crash course</a></li>
+                <li>Javascript 101 - <a href="http://learn.jquery.com/javascript-101/">http://learn.jquery.com/javascript-101/</a></li>
+                <li>How JQuery works - <a href="http://learn.jquery.com/about-jquery/how-jquery-works/">http://learn.jquery.com/about-jquery/how-jquery-works/</a></li>
+                <li>Javascript Objects in Detail - <a href="http://javascriptissexy.com/javascript-objects-in-detail/">http://javascriptissexy.com/javascript-objects-in-detail/</a></li>
             </ol>
             <p>
                 Please prepare a report where you compare and combine insight from all this readings to explain the following concepts: Function, object, event, and Document Object Model.
@@ -86,10 +92,10 @@
                 <h2>Additional Resources</h2>
                 <ol><h3>Javascript</h3>
                     <li><a href="http://www.json.org">JSON.org</a> - Introducing JSON (JavaScript Object Notation)</li>
-                    <li><a href="http://eloquentjavascript.net/" target="blank">Eloquent Javascript</a> - Free online book with interactive tutorials</li>
-                    <li><a href="http://en.wikipedia.org/wiki/JavaScript" target="blank">Javascript History</a></li>
-                    <li><a href="http://jquery.com/" target="blank">JQuery</a></li>
-                    <li><a href="http://jqueryui.com/" target="blank">JQuery UI</a></li>
+                    <li><a href="http://eloquentjavascript.net/">Eloquent Javascript</a> - Free online book with interactive tutorials</li>
+                    <li><a href="http://en.wikipedia.org/wiki/JavaScript">Javascript History</a></li>
+                    <li><a href="http://jquery.com/">JQuery</a></li>
+                    <li><a href="http://jqueryui.com/">JQuery UI</a></li>
                     <li><a href="http://jsfiddle.net/">JSFiddle</a> - Livecoding environment</li>
                     <li><a href="http://codepen.io/">CodePen</a> - Livecoding environment</li>
                 </ol>
