--- a/moving-strings/index.html
+++ b/moving-strings/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Shuffled Story</title>
+    <title>Moving strings</title>
     <script src="data.js"></script>
     <style>
     	body { margin:0; padding:0; font-family: courier new; }
