selfish giant project edit

--- a/assignment-4.html
+++ b/assignment-4.html
@@ -57,7 +57,7 @@
             </p>
             <ol>
                 <li><a href="live-inputs.html">Live text input and string manipulation</a> - introducing the <a href="http://html5demos.com/contenteditable">contenteditable</a> attribute</li>
-                <li><a href="moving-strings">Slightly more complex string manipulation</a> - activated on click. View the source code and note the parsing techniques to build a usable structure from a plain text file. How would I go about it if I wanted to <a href="http://en.wikipedia.org/wiki/Sanitization_%28classified_information%29">redact</a> out specific words or sentences from a text? Would I need more structure? What would it take to build an interactive interface that redacts words or blocks of words on click?</li>
+                <li><a href="moving-strings">Slightly more complex string manipulation</a> - activated on click. View the source code and study the parsing techniques to build a usable structure from a plain text file. How would I go about it if I wanted to <a href="http://en.wikipedia.org/wiki/Sanitization_%28classified_information%29">redact</a> out specific words or sentences from a text? Would I need more structure? What would it take to build an interactive interface that redacts words or blocks of words on click?</li>
             </ol>
         
             <h2>Due Date</h2>
