character stream example

--- a/examples.html
+++ b/examples.html
@@ -92,6 +92,7 @@
 			<li><a href="spring-2014/pop-ups/">Object based pop-ups</a> and <a href="spring-2014/pop-ups/youtube-popups.html">Object based video pop-ups</a></li>
 			<li><a href="live-inputs.html">Live inputs</a> using contenteditable</li>
 			<li><a href="moving-strings">String Manipulation</a> replacing specific words in a text</li>
+			<li><a href="moving-strings/character-stream.html">String Manipulation</a> Character Stream</li>
 			<li><a href="spring-2013/navigation.html">Event binding</a></li>
 			<li><a href="spring-2014/video-bg/">Simple Video Background</a></li>
 			<li><a href="spring-2014/slideshow-bg/">Slideshow background</a></li>
