character stream example no click

--- a/moving-strings/character-stream.html
+++ b/moving-strings/character-stream.html
@@ -59,11 +59,9 @@
 
 	<script type="application/x-javascript">
 	window.onclick = function () {
-		var mycolor = colors[Math.floor(Math.random() * colors.length)];
-		document.getElementsByTagName("body")[0].style.backgroundColor = mycolor;
-		console.log(mycolor);
-		//document.getElementsByTagName("p")[0].innerHTML =  mycolor;
-		//n = 0;
+		// nothing here yet
+		// perhaps this gets to pause the stream?
+		// http://stackoverflow.com/questions/3969475/javascript-pause-settimeout
 	}
 	</script>
 </body>
