assignment 4 links edit

--- a/assignment-4.html
+++ b/assignment-4.html
@@ -76,8 +76,9 @@
                 <li>Eloquent Javascript Chapter 2: <a href="http://eloquentjavascript.net/chapter2.html">Basic JavaScript: values, variables, and control flow</a></li>
                 <li>Eloquent Javascript Chapter 3: <a href="http://eloquentjavascript.net/chapter3.html">Functions</a></li>
                 <li>Eloquent Javascript Chapter 11: <a href="http://eloquentjavascript.net/chapter11.html">Web programming: A crash course</a></li>
-                <li>Javascript 101 - <a href="http://learn.jquery.com/javascript-101/">http://learn.jquery.com/javascript-101/</a></li>
+                <li>Learn JQuery - <a href="http://learn.jquery.com/">http://learn.jquery.com/</a></li>
                 <li>How JQuery works - <a href="http://learn.jquery.com/about-jquery/how-jquery-works/">http://learn.jquery.com/about-jquery/how-jquery-works/</a></li>
+                <li>JQuery Code Organization - <a href="http://learn.jquery.com/code-organization/">http://learn.jquery.com/code-organization/</a></li>
                 <li>Javascript Objects in Detail - <a href="http://javascriptissexy.com/javascript-objects-in-detail/">http://javascriptissexy.com/javascript-objects-in-detail/</a></li>
             </ol>
             <p>
