slick carousel link

--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
                 <li><a href="http://d3js.org/">D3</a></li>
                 <li><a href="http://raphaeljs.com/">Raphael</a></li>
                 <li><a href="http://www.createjs.com/#!/EaselJS">EaselJS</a></li>
+                <li><a href="http://p5js.org">p5JS</a></li>
+
             </ol>
 
             <h3>WebGL and 3D graphics</h3>
