--- a/links.html
+++ b/links.html
@@ -126,8 +126,14 @@
                 <li>
                      <a href="http://jscrollpane.kelvinluck.com/">jScrollPane</a> cross browser styleable scrollbars with jQuery and CSS
                 </li>
+                <li>
+                     <a href="http://kenwheeler.github.io/slick/">slick carousel</a> fully responsive carousel with jQuery and CSS
+                </li>
             </ul>
         </div>
+        
+
+
         
         <div id="graphic-design">
             <h3>Graphic Design</h3>
