slick carousel link

--- a/links.html
+++ b/links.html
@@ -127,7 +127,7 @@
                      <a href="http://jscrollpane.kelvinluck.com/">jScrollPane</a> cross browser styleable scrollbars with jQuery and CSS
                 </li>
                 <li>
-                     <a href="http://kenwheeler.github.io/slick/">slick carousel</a> fully responsive carousel with jQuery and CSS
+                     <a href="http://kenwheeler.github.io/slick/">Slick carousel</a> fully responsive carousel with jQuery and CSS
                 </li>
             </ul>
         </div>
