fixed some links

--- a/assignment-4.html
+++ b/assignment-4.html
@@ -75,11 +75,12 @@
                 <li>Dan Gardner and Mike Treff - The Next Big Thing In Responsive Design - <a href="http://www.fastcodesign.com/3036091/the-next-big-thing-in-responsive-design/">http://www.fastcodesign.com/3036091/the-next-big-thing-in-responsive-design/</a></li>-->
                 <li>Eloquent Javascript Chapter 2: <a href="http://eloquentjavascript.net/chapter2.html">Basic JavaScript: values, variables, and control flow</a></li>
                 <li>Eloquent Javascript Chapter 3: <a href="http://eloquentjavascript.net/chapter3.html">Functions</a></li>
+                <li>Eloquent Javascript Chapter 6: - <a href="http://eloquentjavascript.net/06_object.html">The Secret Life of Objects</a></li>
                 <li>Eloquent Javascript Chapter 11: <a href="http://eloquentjavascript.net/chapter11.html">Web programming: A crash course</a></li>
-                <li>Learn JQuery - <a href="http://learn.jquery.com/">http://learn.jquery.com/</a></li>
-                <li>How JQuery works - <a href="http://learn.jquery.com/about-jquery/how-jquery-works/">http://learn.jquery.com/about-jquery/how-jquery-works/</a></li>
-                <li>JQuery Code Organization - <a href="http://learn.jquery.com/code-organization/">http://learn.jquery.com/code-organization/</a></li>
-                <li>Javascript Objects in Detail - <a href="http://javascriptissexy.com/javascript-objects-in-detail/">http://javascriptissexy.com/javascript-objects-in-detail/</a></li>
+                <li><a href="http://learn.jquery.com/">Learn JQuery</a></li>
+                <li><a href="http://learn.jquery.com/about-jquery/how-jquery-works/">How JQuery works</a></li>
+                <li><a href="http://learn.jquery.com/code-organization/">JQuery Code Organization</a></li>                
+                <li>Javascript is Sexy: <a href="http://javascriptissexy.com/javascript-objects-in-detail/">Javascript Objects in Detail</a></li>
             </ol>
             <p>
                 Please prepare a report where you compare and combine insight from all this readings to explain the following concepts: Function, object, event, and Document Object Model.
