--- a/links.html
+++ b/links.html
@@ -121,8 +121,8 @@
                      <a href="http://www.videojs.com/">Video.js</a> The open source HTML5 video player
                 </li>
                 <li>
-                     <a href="http://demos.usejquery.com/ketchup-plugin/">jQuery Ketchup Plugin</a> Tasty Form Validation
-                </li>
+                     <a href="https://github.com/mustardamus/ketchup-plugin">jQuery Ketchup Plugin</a> Tasty Form Validation
+                </li><!--used to be here http://demos.usejquery.com/ketchup-plugin/-->
                 <li>
                      <a href="http://jscrollpane.kelvinluck.com/">jScrollPane</a> cross browser styleable scrollbars with jQuery and CSS
                 </li>
@@ -157,6 +157,9 @@
 
                 <li>
                      <a href="http://www.abookapart.com/products/responsive-web-design">Responsive Web Design</a> by Ethan Marcotte, with an available <a href="http://responsivewebdesign.com/">workshop</a>
+                </li>
+                <li>
+                     <a href="https://ia.net/know-how/100e2r">The 100% Easy-2-Read Standard</a> via <a href="https://ia.net/">information Architects Inc.</a> Good notes on text readability and responsive design
                 </li>
             </ul>
         </div>
@@ -197,6 +200,9 @@
                 </li>
                 <li>
                      <a href="http://framelessgrid.com/">Frameless Grid</a>. Adapt column by column, not pixel by pixel. Non-fluid responsive design
+                </li>
+                 <li>
+                     <a href="http://thatcoolguy.github.io/gridless-boilerplate/">Gridless Boilerplate</a>. Make future-proof mobile first responsive websites with ease. <a href="https://github.com/thatcoolguy/gridless-boilerplate">Gridless Boilerplate github repo</a>
                 </li>
             </ul>
         </div>
