adding the stripe api

--- a/assignment-5.html
+++ b/assignment-5.html
@@ -63,6 +63,7 @@
                 <li><a href="https://developers.google.com/maps/">Google maps public API</a></li>
                 <li><a href="https://developers.google.com/custom-search/">Google search public API</a></li>
                 <li><a href="https://developers.google.com/custom-search/json-api/v1/overview">Google search public API overview</a></li>
+                 <li><a href="https://stripe.com/docs/api">Stripe Payments Public API</a></li>
             </ol>
             <p>
                 Public API examples
