--- a/assignment-5.html
+++ b/assignment-5.html
@@ -117,7 +117,9 @@
                     <li>JQuery - <a href="http://api.jquery.com/jquery.ajax/">AJAX</a></li>
                     <li>Mozilla - <a href="https://developer.mozilla.org/en-US/docs/AJAX">AJAX</a></li>
                 </ol>
-
+                <ol><h3>Authentication Protocols</h3>
+                    <li><a href="http://oauth.net">oAuth</a> - An open protocol to allow secure authorization in a simple and standard method from web, mobile and desktop applications</li>
+                </ol>
             </p>
             <p style="text-align:center; margin:0; padding:0;">
                 <img src="fall-2012/images/robota.png" style="display:block; margin:auto;"/>
