pipes and ifttt

--- a/assignment-5.html
+++ b/assignment-5.html
@@ -120,6 +120,10 @@
                 <ol><h3>Authentication Protocols</h3>
                     <li><a href="http://oauth.net">oAuth</a> - An open protocol to allow secure authorization in a simple and standard method from web, mobile and desktop applications</li>
                 </ol>
+                <ol><h3>Connecting APIs using Visual Interfaces</h3>
+                    <li><a href="https://pipes.yahoo.com/pipes/">Yahoo pipes</a></li>
+                    <li><a href="https://ifttt.com">If this then that (ifttt.com)</a></li>
+                </ol> 
             </p>
             <p style="text-align:center; margin:0; padding:0;">
                 <img src="fall-2012/images/robota.png" style="display:block; margin:auto;"/>
