Links to RSS and JSON formatting tool

--- a/assignment-5.html
+++ b/assignment-5.html
@@ -104,6 +104,14 @@
             
             <p>
                 <h2>Additional Resources</h2>
+                <ol><h3>JSON formatting tools <strong>USEFUL!</strong></h3>
+                    <li><a href="http://jsonformatter.curiousconcept.com">JSON Formatter</a> - Debugging tool. As JSON data is often generated without line breaks to save space, it is extremely difficult to actually read and make sense of it. This tool solves this problem by formatting the JSON data so that it is easy to read and debug by human beings</li>
+                    <li><a href="http://jsbeautifier.org/">JS Beautifier</a> - Similar tool to expand minified Javascript code and format JSON data</li>
+                </ol>
+                <ol><h3>RSS feeds and Web Syndication</h3>
+                    <li>Wikipedia - <a href="http://en.wikipedia.org/wiki/History_of_web_syndication_technology">History of web syndication technology</a></li>
+                    <li>Wikipedia - <a href="http://en.wikipedia.org/wiki/RSS">Really Simple Syndication (RSS)</a></li>
+                </ol>
                 <ol><h3>APIs</h3>
                     <li>Wikipedia - <a href="http://en.wikipedia.org/wiki/Application_programming_interface">Application Programming Interface (API)</a></li>
                     <li>Wikipedia - <a href="http://en.wikipedia.org/wiki/Web_API">Web APIs</a></li>
