--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 <li><a href="assignment-3.html">UI/UX Fundamentals</a></li>
                 <li><a href="assignment-4.html">Dive into Javascript</a></li>
                 <li><a href="assignment-5.html">Advanced Javascript with REST and AJAX</a></li>
+                <li><a href="assignment-6.html">Alternative web content with WebGL, &lt;canvas&gt; and SVG</a></li>
             </ol>
         </div>
         
