added more ids to the flickr api example

--- a/apis/flickr/index.html
+++ b/apis/flickr/index.html
@@ -30,7 +30,7 @@
 	// you can input user_id http://storm.usc.edu/~Black/IML-400/apis/flickr/?user_id=75903973@N00
 
 	// Here are some ids
-	var user_ids = ["75903973@N00", "17996229@N03", "23006248@N00", "49488981@N00", "24947909@N06"]
+	var user_ids = ["75903973@N00", "17996229@N03", "33761401@N02", "49488981@N00", "24947909@N06", "40962351@N00", "38546378@N02"]
 	var random_id = user_ids[Math.floor(Math.random()*user_ids.length)];
 	
 	// set up default user id
