--- a/apis/flickr/index.html
+++ b/apis/flickr/index.html
@@ -47,12 +47,10 @@
     s = "loading: " + response.photos.photo.length + " photos<br/>";
     
     for (var i=0; i < response.photos.photo.length; i++) {
-      photo = response.photos.photo[i];
-      t_url = "http://farm" + photo.farm + ".static.flickr.com/" + 
-        photo.server + "/" + photo.id + "_" + photo.secret + "_" + "s.jpg";
-      p_url = "http://www.flickr.com/photos/" + photo.owner + "/" + photo.id;
-      s +=  '<a href="' + p_url + '">' + '<img alt="'+ photo.title + 
-        '"src="' + t_url + '"/>' + '</a>';
+		photo = response.photos.photo[i];
+		t_url = "http://farm" + photo.farm + ".static.flickr.com/" + photo.server + "/" + photo.id + "_" + photo.secret + "_" + "s.jpg";
+		p_url = "http://www.flickr.com/photos/" + photo.owner + "/" + photo.id;
+		s +=  '<a href="' + p_url + '">' + '<img alt="'+ photo.title + '"src="' + t_url + '"/>' + '</a>';
     }
     //document.writeln(s);
     document.body.innerHTML=s;
@@ -62,9 +60,9 @@
 
 <body>
 	<script>
-	var request_url = document.createElement( 'script' );
-	request_url.setAttribute('src', script_src);
-	document.body.appendChild( request_url );
-  </script>
+		var request_url = document.createElement( 'script' );
+		request_url.setAttribute('src', script_src);
+		document.body.appendChild( request_url );
+	</script>
 </body>
 </html>
