--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -381,6 +381,7 @@
 				<li>Object Oriented Architectures and Object Serialization (XML, HTML, SVG, JSON, etc)</li>
 				<li>Web 2.0 behind the scenes: Ajax and Restful APIs</li>
 				<li>Public API examples (Google maps, google search, twitter, instagram, youtube, etc)</li>
+				<li>Second generation [not so] public APIs and the problem with oAuth</li>
 				<li>The open web in peril</li>
 			</ol>
 
