--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -382,7 +382,7 @@
 				<li>Web 2.0 behind the scenes: Ajax and Restful APIs</li>
 				<li>Public API examples (Google maps, google search, twitter, instagram, youtube, etc)</li>
 				<li>Second generation [not so] public APIs and the problem with oAuth</li>
-				<li>The open web in peril</li>
+				<li>Net Neutrality and The open web in peril</li>
 			</ol>
 
 			<h3>Workshop</h3>
