--- a/assignment-5.html
+++ b/assignment-5.html
@@ -63,6 +63,7 @@
                 <li><a href="https://developers.google.com/maps/">Google maps public API</a> - recommended</li>
                 <li><a href="https://developers.google.com/custom-search/">Google search public API</a> - recommended</li>
                 <li><a href="https://developers.google.com/custom-search/json-api/v1/overview">Google search public API overview</a></li>
+                <li><a href="https://developer.foursquare.com/docs/">Foursquare Public API</a> - warning: requires oAuth</li>
                  <li><a href="https://stripe.com/docs/api">Stripe Payments Public API</a> - warning: requires oAuth</li>
             </ol>
             <p>
