--- a/syllabus-spring-2015.html
+++ b/syllabus-spring-2015.html
@@ -405,6 +405,7 @@
 						<li><a href="https://developers.google.com/maps/">Google maps public API</a></li>
 						<li><a href="https://developers.google.com/custom-search/">Google search public API</a></li>
 						<li><a href="https://developers.google.com/custom-search/json-api/v1/overview">Google search public API overview</a></li>
+						<li><a href="https://developer.foursquare.com/docs/">Foursquare Public API</a></li>
 						<li><a href="https://stripe.com/docs/api">Stripe Payments Public API</a></li>
 					</ul>
 			</ol>
